--- a/plt_graphing/line_bygroup.ipynb
+++ b/plt_graphing/line_bygroup.ipynb
@@ -230,6 +230,7 @@
    "outputs": [],
    "source": [
     "# Define list flattener function (useful for simplifying matplotlib)\n",
+    "# no longer necessary but kept here for the future\n",
     "def flatten(xss):\n",
     "    return [x for xs in xss for x in xs]"
    ]
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -270,13 +271,11 @@
     "plt.figure(figsize=(8,5)) # set fig size\n",
     "\n",
     "x = [1, 2, 3, 4, 5, 6] # brightness levels\n",
-    "y = [[datafile['vis01_unpl_avg'].mean()], [datafile['vis02_unpl_avg'].mean()], [datafile['vis03_unpl_avg'].mean()],\n",
-    "     [datafile['vis04_unpl_avg'].mean()], [datafile['vis05_unpl_avg'].mean()], [datafile['vis06_unpl_avg'].mean()]] # calc mean\n",
-    "y = flatten(y) # flatten list of lists\n",
+    "y = [datafile['vis01_unpl_avg'].mean(), datafile['vis02_unpl_avg'].mean(), datafile['vis03_unpl_avg'].mean(),\n",
+    "     datafile['vis04_unpl_avg'].mean(), datafile['vis05_unpl_avg'].mean(), datafile['vis06_unpl_avg'].mean()] # calc mean\n",
     "\n",
-    "yerror = [[datafile['vis01_unpl_avg'].std()], [datafile['vis02_unpl_avg'].std()], [datafile['vis03_unpl_avg'].std()], \n",
-    "          [datafile['vis04_unpl_avg'].std()], [datafile['vis05_unpl_avg'].std()], [datafile['vis06_unpl_avg'].std()]] # calc SD\n",
-    "yerror = flatten(yerror) # flatten list of lists\n",
+    "yerror = [datafile['vis01_unpl_avg'].std(), datafile['vis02_unpl_avg'].std(), datafile['vis03_unpl_avg'].std(), \n",
+    "          datafile['vis04_unpl_avg'].std(), datafile['vis05_unpl_avg'].std(), datafile['vis06_unpl_avg'].std()] # calc SD\n",
     "\n",
     "plt.plot(x, y, marker='o', color='b', label='MIHYST CPP') # plot x and y, set custom details\n",
     "\n",
