--- a/misc_tasks/write_xml_file.ipynb
+++ b/misc_tasks/write_xml_file.ipynb
@@ -53,112 +53,298 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-24</td>\n",
-       "      <td>-54</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>7Networks_LH_Vis_1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>aHIP-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-26</td>\n",
-       "      <td>-78</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>7Networks_LH_Vis_2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>-32</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>pHIP-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-46</td>\n",
-       "      <td>-70</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>7Networks_LH_Vis_3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>lAMY-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>-68</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>7Networks_LH_Vis_4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>mAMY-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>-30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>THA-DP-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>-26</td>\n",
-       "      <td>-96</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>7Networks_LH_Vis_5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>196</td>\n",
-       "      <td>28</td>\n",
-       "      <td>30</td>\n",
-       "      <td>42</td>\n",
-       "      <td>7Networks_RH_Default_PFCdPFCm_6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>197</td>\n",
-       "      <td>24</td>\n",
-       "      <td>24</td>\n",
-       "      <td>54</td>\n",
-       "      <td>7Networks_RH_Default_PFCdPFCm_7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>198</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-54</td>\n",
        "      <td>14</td>\n",
-       "      <td>7Networks_RH_Default_pCunPCC_1</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>THA-VP-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>199</td>\n",
+       "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>-48</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>THA-VA-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>THA-DA-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>NAc-shell-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>NAc-core-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>pGP-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>aGP-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>aPUT-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
        "      <td>30</td>\n",
-       "      <td>7Networks_RH_Default_pCunPCC_2</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>pPUT-rh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>200</td>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
        "      <td>6</td>\n",
-       "      <td>-58</td>\n",
-       "      <td>44</td>\n",
-       "      <td>7Networks_RH_Default_pCunPCC_3</td>\n",
+       "      <td>aCAU-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>pCAU-rh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>-24</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>aHIP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>-26</td>\n",
+       "      <td>-32</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>pHIP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>-26</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>lAMY-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>mAMY-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>-30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>THA-DP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>THA-VP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>THA-VA-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>23</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>THA-DA-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>24</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>NAc-shell-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>NAc-core-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>pGP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>27</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>aGP-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>aPUT-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>29</td>\n",
+       "      <td>-28</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>pPUT-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>30</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>aCAU-lh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>31</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>pCAU-lh</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       A   B   C   D                                E\n",
-       "0      1 -24 -54 -10               7Networks_LH_Vis_1\n",
-       "1      2 -26 -78 -14               7Networks_LH_Vis_2\n",
-       "2      3 -46 -70  -8               7Networks_LH_Vis_3\n",
-       "3      4 -10 -68  -4               7Networks_LH_Vis_4\n",
-       "4      5 -26 -96 -12               7Networks_LH_Vis_5\n",
-       "..   ...  ..  ..  ..                              ...\n",
-       "195  196  28  30  42  7Networks_RH_Default_PFCdPFCm_6\n",
-       "196  197  24  24  54  7Networks_RH_Default_PFCdPFCm_7\n",
-       "197  198  12 -54  14   7Networks_RH_Default_pCunPCC_1\n",
-       "198  199   6 -48  30   7Networks_RH_Default_pCunPCC_2\n",
-       "199  200   6 -58  44   7Networks_RH_Default_pCunPCC_3\n",
-       "\n",
-       "[200 rows x 5 columns]"
+       "     A   B   C   D             E\n",
+       "0    0  26 -14 -20       aHIP-rh\n",
+       "1    1  28 -32  -8       pHIP-rh\n",
+       "2    2  28  -2 -22       lAMY-rh\n",
+       "3    3  22  -6 -16       mAMY-rh\n",
+       "4    4  16 -30   2     THA-DP-rh\n",
+       "5    5  14 -22   2     THA-VP-rh\n",
+       "6    6   8 -10   6     THA-VA-rh\n",
+       "7    7  12 -22  12     THA-DA-rh\n",
+       "8    8  12  10  -6  NAc-shell-rh\n",
+       "9    9  14  18  -2   NAc-core-rh\n",
+       "10  10  24  -8  -2        pGP-rh\n",
+       "11  11  18   0  -2        aGP-rh\n",
+       "12  12  24   8  -2       aPUT-rh\n",
+       "13  13  30  -6   4       pPUT-rh\n",
+       "14  14  14  14   6       aCAU-rh\n",
+       "15  15  14   4  16       pCAU-rh\n",
+       "16  16 -24 -14 -20       aHIP-lh\n",
+       "17  17 -26 -32  -8       pHIP-lh\n",
+       "18  18 -26  -2 -22       lAMY-lh\n",
+       "19  19 -20  -6 -16       mAMY-lh\n",
+       "20  20 -14 -30   2     THA-DP-lh\n",
+       "21  21 -12 -22   2     THA-VP-lh\n",
+       "22  22  -6 -10   6     THA-VA-lh\n",
+       "23  23 -10 -22  12     THA-DA-lh\n",
+       "24  24 -10  10  -6  NAc-shell-lh\n",
+       "25  25 -12  18  -2   NAc-core-lh\n",
+       "26  26 -22  -8  -2        pGP-lh\n",
+       "27  27 -16   0  -2        aGP-lh\n",
+       "28  28 -22   8  -2       aPUT-lh\n",
+       "29  29 -28  -6   4       pPUT-lh\n",
+       "30  30 -12  14   6       aCAU-lh\n",
+       "31  31 -12   4  16       pCAU-lh"
       ]
      },
      "execution_count": 4,
@@ -168,7 +354,7 @@
    ],
    "source": [
     "\n",
-    "data = pd.read_csv(\"/Users/noahwaller/Downloads/schaefer/labels_schaefer200.csv\")\n",
+    "data = pd.read_csv(\"/Users/noahwaller/Documents/3cohort-GIMME PAPER/Tian2020MSA/labels_tianMSAS2.csv\")\n",
     "df = pd.DataFrame(data)\n",
     "df"
    ]
@@ -182,14 +368,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data has been written to /Users/noahwaller/Downloads/schaefer/labels_schaefer200_xmlformat.txt\n"
+      "Data has been written to /Users/noahwaller/Documents/3cohort-GIMME PAPER/Tian2020MSA/labels_tianMSAS2_xmlformat.txt\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Define the output file path\n",
-    "output_file_path = '/Users/noahwaller/Downloads/schaefer/labels_schaefer200_xmlformat.txt'\n",
+    "output_file_path = '/Users/noahwaller/Documents/3cohort-GIMME PAPER/Tian2020MSA/labels_tianMSAS2_xmlformat.txt'\n",
     "\n",
     "# Open the file in write mode\n",
     "with open(output_file_path, 'w') as file:\n",
